--- a/k8s/deployment_server.yaml
+++ b/k8s/deployment_server.yaml
@@ -15,6 +15,15 @@ spec:
       labels:
         app: sc-clip
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: node.kubernetes.io/memory
+                    operator: In
+                    values:
+                      - 32Gi
       containers:
         - name: sc-clip
           image: replaceme
