--- a/.github/actions/k3s-deploy/action.yml
+++ b/.github/actions/k3s-deploy/action.yml
@@ -22,8 +22,8 @@ runs:
       with:
         webhook-url: ${{ inputs.webhook-url }}
         embed-color: 15105570
-        embed-title: "${{ inputs.embed-title }}"
-        embed-description: "```[sc-clip] Deploy Started```"
+        embed-title: "[sc-clip] ${{ inputs.embed-title }}"
+        embed-description: "```Deploy Started```"
 
     - uses: imranismail/setup-kustomize@v1
       with:
@@ -48,9 +48,9 @@ runs:
       uses: ./.github/actions/discord-webhook
       with:
         webhook-url: ${{ inputs.webhook-url }}
-        embed-title: "${{ inputs.embed-title }}"
+        embed-title: "[sc-clip] ${{ inputs.embed-title }}"
         embed-color: 15548997
-        embed-description: "```[sc-clip] 🚨 Deploy Failed 🚨```"
+        embed-description: "```🚨 Deploy Failed 🚨```"
 
     - name: Send Discord Webhook
       if: ${{ success() && inputs.embed-title != '' }}
