--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,6 +48,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Set build start in env variable
         run: echo "BUILD_START=$(date +%s)" >> $GITHUB_ENV
 
@@ -56,8 +62,8 @@ jobs:
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
           embed-color: 16776960
-          embed-title: "${{ needs.setup_env.outputs.commit_msg }}  •  ${{ needs.setup_env.outputs.short_sha }}"
-          embed-description: "```[sc-clip] Build Started```"
+          embed-title: "[sc-clip] ${{ needs.setup_env.outputs.commit_msg }}  •  ${{ needs.setup_env.outputs.short_sha }}"
+          embed-description: "```Build Started```"
 
       - name: Login to registry
         uses: docker/login-action@v2
@@ -70,7 +76,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           file: ./Dockerfile
           tags: stablecog/sc-clip:${{ needs.setup_env.outputs.branch_name }}-${{ env.GITHUB_RUN_ID }}
@@ -81,8 +87,8 @@ jobs:
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
           embed-color: 15548997
-          embed-title: "${{ needs.setup_env.outputs.commit_msg }}  •  ${{ needs.setup_env.outputs.short_sha }}"
-          embed-description: "```[sc-clip] 🚨 Build FAILED 🚨```"
+          embed-title: "[sc-clip] ${{ needs.setup_env.outputs.commit_msg }}  •  ${{ needs.setup_env.outputs.short_sha }}"
+          embed-description: "```🚨 Build FAILED 🚨```"
 
   deploy:
     name: 🚀 Deploy CLIP API
