--- a/.github/actions/k3s-deploy/action.yml
+++ b/.github/actions/k3s-deploy/action.yml
@@ -30,11 +30,11 @@ runs:
         kustomize-version: "3.5.4"
 
     - name: Set image
-      working-directory: ./k8s/prod
+      working-directory: ./k8s
       shell: bash
       run: |
         kustomize edit set image replaceme=${{ inputs.image }}
-        kustomize build . > ../ci-deployment.yaml
+        kustomize build . > ci-deployment.yaml
 
     - name: Deploy image to k8s cluster
       uses: bbedward/kubectl@master
